Allow override of optimized method if class uses prepend

When a class uses prepend, method entries change, causing
a matching entry not to be found in vm_opt_method_table
later when the method is redefined.

Replace vm_opt_method_table with vm_opt_mid_class_table,
which is a table mapping method ids to an array of classes.
When checking for optimized method redefinition, see if there
is an entry for the method id, and if so, see if the currently
class is in the array of classes.  If so, mark the optimized
method as having been overridden.

Fixes [Bug #17725]